styling work: - changed recipient selector to match other elements in modal - prevented main window to shift to the left when opening modal

--- a/DistriFest/Content/Site.css
+++ b/DistriFest/Content/Site.css
@@ -208,6 +208,24 @@ select.input-validation-error {
         }
 }
 
+body.modal-open,
+.modal-open .navbar-fixed-top,
+.modal-open .navbar-fixed-bottom {
+    margin-right: 0px;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1040;
+    display: none;
+    overflow: auto;
+/*    overflow-y: scroll; */
+}
+
 .modal-dialog {
     z-index: 1050;
     width: auto;
@@ -248,6 +266,13 @@ select.input-validation-error {
     height: 35px;
     margin-right: 5px;
     box-shadow: inset 2px 2px 2px rgba(0,0,0,0.15);
+    padding-left: 10px;
+}
+
+.chatrecipient {
+    max-width: 80%;
+    height: 35px;
+    margin-right: 5px;
     padding-left: 10px;
 }
 
